Fix HTML formatting and add missing newline

--- a/index.html
+++ b/index.html
@@ -92,6 +92,7 @@
     <div class="sakura-petals"></div>
     <script src="assets/JS/gsap.min.js"></script>
     <script src="assets/JS/sakura.min.js"></script>
-    <script src="assets/js/main.js"></script>
+    <script src="assets/JS/main.js"></script>
 </body>
+
 </html>
